--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
               <option value="Nabeul">Nabeul</option>
               <option value="Tunis">Tunis</option>
               <option value="Sfax">Sfax</option>
-                             
+
             </select>
           </p>
           <p>
@@ -53,14 +53,13 @@
             <label> Speciality</label>
             <select name="speciality" id="speciality" required>
               <option value="Plumber">Plumber</option>
-              <option value="Air Conditioning">Air Conditioning</option>
               <option value="Gardener">Gardener</option>
               <option value="Chef">Chef</option>
               <option value="Carpenter">Carpenter</option>
               <option value="Assembly">Assembly</option>
-              <option value="Babysitting">Babysitting</option>
-              <option value="Housekeeping">Housekeeping</option>
-              <option value="TV Fixing">TV Fixing</option>                            
+              <option value="BabySitting">Baby Sitting</option>
+              <option value="Delivery">Delivery</option>
+              <option value="TVFixing">TV Fixing</option>
             </select>
           </p>
           <p>
@@ -82,7 +81,7 @@
       </div>
     </div>
   </div>
-	
+
   <script src="https://www.gstatic.com/firebasejs/5.2.0/firebase.js"></script>
   <script src="js/main.js"></script>
 </body>
