--- a/template.html
+++ b/template.html
@@ -18,8 +18,8 @@
       <main class="container ">
           <h1 class="job-name">Plombiers</h1>
           <div id="contenu">
-                     <div id="loading" class="alert-primary p-5 text-center">
-                   <img src="https://loading.io/spinners/default/lg.circle-dot-preloader.gif" style="height:256px;" alt="Common spinner used in various website.">
+                     <div id="loading" class="p-5 text-center">
+                   <img src="https://loading.io/spinners/message/lg.messenger-typing-preloader.gif" style="height:256px;" alt="Common spinner used in various website.">
               </div>
               </div>
 
